tests/Rules/Aria/Fixtures/invalid/role_deprecated.html.twig
{# 1 errors #}
<ul role="directory"><li>Item</li></ul>
